Dodanie MapStruct dla Performer i Track