@@ -2,18 +2,17 @@ package com.example.musicproject.service;
 
 
 import com.example.musicproject.model.dto.AlbumDTO;
-import com.example.musicproject.model.dto.TrackDTO;
 import com.example.musicproject.model.entity.Album;
-import com.example.musicproject.model.entity.Track;
 import com.example.musicproject.model.mapper.AlbumMapper;
-import com.example.musicproject.model.mapper.TrackMapper;
 import com.example.musicproject.repository.AlbumRepository;
-import com.example.musicproject.repository.TrackRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
+import java.util.HashSet;
 import java.util.List;
 import java.util.NoSuchElementException;
+import java.util.Set;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -22,11 +21,11 @@ public class AlbumService {
     private final AlbumRepository albumRepository;
     private final AlbumMapper albumMapper;
 
-    public List<AlbumDTO> getListOfAlbums() {
+    public List<AlbumDTO> getListOfAlbumsDTO() {
         return albumRepository.findAll()
                 .stream()
                 .map(albumMapper::fromAlbum)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     public AlbumDTO getAlbum(Long id) {
@@ -39,4 +38,14 @@ public class AlbumService {
         albumRepository.save(album);
         return albumMapper.fromAlbum(album);
     }
+
+    public Set<Album> getSetOfAlbums (Set<String> albumsName) {
+        Set<Album> albumsForTrack = new HashSet<>();
+        for (String albumTitle : albumsName){
+            albumsForTrack.add(albumRepository.findByTitle(albumTitle).orElseThrow(() -> new NoSuchElementException("First you must add Album to Repository " + albumTitle)));
+        }
+        return albumsForTrack;
+
+    }
+
 }
